[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/IncrementBox/IncrementBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/PeriodSlotEdit/PeriodSlotEdit.gd" type="Script" id=2]

[node name="PeriodSlotEdit" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 395.0
margin_bottom = 127.0
color = Color( 0.219608, 0.215686, 0.286275, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 395.0
margin_bottom = 127.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 395.0
margin_bottom = 127.0
custom_constants/separation = 20

[node name="PeriodNo" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 395.0
margin_bottom = 14.0
text = "Period - 1"
align = 1

[node name="PeriodTimeSlot" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 395.0
margin_bottom = 67.0
custom_constants/separation = 5

[node name="start_hr" parent="MarginContainer/VBoxContainer/PeriodTimeSlot" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_right = 84.0
margin_bottom = 33.0

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/PeriodTimeSlot"]
margin_left = 89.0
margin_top = 9.0
margin_right = 93.0
margin_bottom = 23.0
text = ":"

[node name="start_min" parent="MarginContainer/VBoxContainer/PeriodTimeSlot" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 98.0
margin_right = 182.0
margin_bottom = 33.0
_upper_imit = 59

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/PeriodTimeSlot"]
margin_left = 187.0
margin_top = 9.0
margin_right = 208.0
margin_bottom = 23.0
text = "  -  "

[node name="end_hr" parent="MarginContainer/VBoxContainer/PeriodTimeSlot" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 213.0
margin_right = 297.0
margin_bottom = 33.0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/PeriodTimeSlot"]
margin_left = 302.0
margin_top = 9.0
margin_right = 306.0
margin_bottom = 23.0
text = ":"

[node name="end_min" parent="MarginContainer/VBoxContainer/PeriodTimeSlot" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 311.0
margin_right = 395.0
margin_bottom = 33.0
_upper_imit = 59

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 395.0
margin_bottom = 87.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 395.0
margin_bottom = 127.0
custom_constants/separation = 100
alignment = 1

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 182.0
margin_right = 213.0
margin_bottom = 20.0
text = "OK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Save" to="." method="_on_Save_pressed"]
